bc/haskell/hw2/grammar.txt
PLUS '+'
MINUS '-'
MULT '*'
DIV '/'
ASSIGN '='
QUOTE '"'
COMMA ','
COLON ':'
LPAR '('
RPAR ')'
DEF 'def'
IF 'if'
ELSE 'else'
EQ '=='
LT '<'
LE '<='
GT '>'
GE '>='
SEMICOLON ';'
PASS 'pass'
NEWLINE '\n'

Digit: [0-9]

Nat: Digit+

Neg: MINUS 
     Digit+
    
Int: Neg | Nat

String: QUOTE .* QUOTE

Identifier: [a-zA-Z_][a-zA-Z0-9_]*

Expr: Int
    | String
    | Identifier
    | Expr PLUS Expr
    | Expr MINUS Expr
    | Expr MULT Expr
    | Expr DIV Expr
    | LPAR Expr RPAR
    | Call

Boolean_Expression: Expr EQ Expr
                  | Expr LT Expr
                  | Expr LE Expr
                  | Expr GT Expr
                  | Expr GE Expr
                  | Expr

Method_Header: DEF Identifier LPAR Formal_Parameters RPAR COLON

Formal_Parameters: %empty
                 | Identifier Formal_Parameters_Next

Formal_Parameters_Next: %empty
                      | COMMA Identifier Formal_Parameters_Next

Arguments: %empty
         | Expr
           Arguments_Next

Arguments_Next: %empty
              | COMMA
                Expr
                Arguments_Next

Assignment: Identifier ASSIGN Expr

Call: Identifier LPAR Arguments RPAR 

Else_Opt: %empty
        | ELSE COLON Body

Statement: Expr
         | WHILE Boolean_Expression COLON Body
         | IF Boolean_Expression COLON Body Else_Opt
         | Method_Def
         | Assignment

Method_Def: Method_Header Body

Body: Statement
    | INDENT_IN
      Indent_Statements
      INDENT_OUT
            
Statements_Opt: %empty
              | Statements

Indent_Statements: PASS
                 | Statements

Statement_End: NEWLINE   Eat_Newlines_Semicolons
             | SEMICOLON Eat_Newlines_Semicolons 

Statements: Statement Statement_End Statements_Next

Statements_Next: %empty
               | Statement Statement_End Statements_Next

Slepýš: Flow

Flow: %empty
    | Statement Flow
    | Method_Def Flow
